--- a/src/main/webapp/layuiadmin/check/caseManager.html
+++ b/src/main/webapp/layuiadmin/check/caseManager.html
@@ -20,18 +20,8 @@
         </button>
     </div>
     <table class="layui-hide" id="test" lay-filter="test"></table>
-    <script type="text/html" id="barDemo">
-        {{#   if(d.place > 0){ }}
-        <i class="layui-icon layui-icon-face-smile" lay-event="dispass" style="color: #FF5722;"></i>  
-        {{#  } else { }}
-        <i class="layui-icon layui-icon-face-cry" lay-event="pass"></i> 
-        {{#  } }}  
-      </script>
     <script src="../layui/layui.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-    <script type="text/html" id="wechatHead">
-        <img style="height:30px;width:28px" src="{{d.headImgUrl}}">
-      </script>
     <script>
         layui.use(['table', 'laytpl', 'layer', 'util'], function () {
             var table = layui.table,
@@ -46,52 +36,15 @@
                 , cols: [[
                     { type: 'checkbox' },
                     { field: 'id', title: 'ID', sort: true }
-                    , { field: 'headImgUrl', title: '微信头像', templet: '#wechatHead' }
-                    , { field: 'nickname', edit: 'text', title: '微信昵称' }
+                    , { field: 'address', title: '地址' }
+                    , { field: 'name', edit: 'text', title: '姓名' }
+                    , { field: 'user_name', edit: 'text', title: '录入人员姓名' }
                     , { field: 'phone', edit: 'text', title: '电话' }
-                    , { field: 'city', edit: 'text', title: '微信所在地' }
-                    , { field: 'openId', title: 'openId' }
-                    , { field: 'subscribeTime', title: '关注时间', align: 'center', templet: function (d) { return util.toDateString(d.subscribeTime, 'yyyy-MM-dd HH:mm') } }
-                    , { title: '操作', toolbar: '#barDemo' }
+                    , { field: 'criminal_content', title: '案件内容' }
+                    , { field: 'license', title: '许可证号' }
+                    , { field: 'criminal_time', title: '案发时间', align: 'center', templet: function (d) { return util.toDateString(d.subscribeTime, 'yyyy-MM-dd HH:mm') } }
                 ]]
             });
-            //监听行工具事件
-            table.on('tool(test)', function (obj) {
-                var openId = obj.data.openId;
-                if (obj.event === 'pass') {
-                    place = 2;
-                    $.ajax({
-                        type: "get",
-                        url: "/ycglj/user/upAtionFormatter.do?openId=" + openId + "&place=2",
-                        contentType: 'application/x-www-form-urlencoded;charset=utf-8',
-                        data: {},
-                        dataType: "json",
-                        success: function (data) {
-                            // layer.msg("设置成功", { icon: 1 });
-                            table.reload('test');
-                        },
-                        error: function (e) {
-                            console.log(e);
-                        }
-                    })
-                } else if (obj.event === 'dispass') {
-                    $.ajax({
-                        type: "get",
-                        url: "/ycglj/user/upAtionFormatter.do?openId=" + openId + "&place=0",
-                        contentType: 'application/x-www-form-urlencoded;charset=utf-8',
-                        data: {},
-                        dataType: "json",
-                        success: function (data) {
-                            // layer.msg("设置成功", { icon: 1 });
-                            table.reload('test');
-                        },
-                        error: function (e) {
-                            console.log(e);
-                        }
-                    })
-                }
-                layer.msg("设置成功", { icon: 1 });
-            })
             //监听搜索
             layui.form.on('submit(search)', function (data) {
                 //input值
@@ -101,15 +54,11 @@
                 //执行重载
                 table.reload('test', {
                     where: field,
-                    url: '/ycglj/user/getAllCrimalRecord.do?place=0&search='+search,
+                    url: '/ycglj/user/getAllCrimalRecord.do?place=0&search=' + search,
                 });
             });
 
         })
-        function setStatus(openId, place) {
-
-        }
-
     </script>
 </body>
 
