--- a/src/main/webapp/layuiadmin/check/caseManager.html
+++ b/src/main/webapp/layuiadmin/check/caseManager.html
@@ -9,7 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="../layui/css/layui.css" media="all">
 </head>
-
+<style>
+        .layui-inline{
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+    </style>
 <body>
     <div class="layui-inline">
         <input type="text" id="search" lay-verify="search" autocomplete="off" placeholder="请输入商户名称" class="layui-input">
