--- a/src/main/webapp/layuiadmin/check/checkPerson.html
+++ b/src/main/webapp/layuiadmin/check/checkPerson.html
@@ -3,16 +3,22 @@
 
 <head>
     <meta charset="utf-8">
-    <title>微信用户</title>
+    <title>人员管理</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="../layui/css/layui.css" media="all">
 </head>
+<style>
+    .layui-inline{
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+    </style>
 
 <body>
     <div class="layui-inline">
-        <input type="text" id="search" lay-verify="search" autocomplete="off" placeholder="请输入微信昵称" class="layui-input">
+        <input type="text" id="search" lay-verify="search" autocomplete="off" placeholder="请输入人员姓名" class="layui-input">
     </div>
     <div class="layui-inline">
         <button class="layui-btn layuiadmin-btn-useradmin" lay-submit lay-filter="search">
@@ -20,18 +26,8 @@
         </button>
     </div>
     <table class="layui-hide" id="test" lay-filter="test"></table>
-    <script type="text/html" id="barDemo">
-        {{#   if(d.place > 0){ }}
-        <i class="layui-icon layui-icon-face-smile" lay-event="dispass" style="color: #FF5722;"></i>  
-        {{#  } else { }}
-        <i class="layui-icon layui-icon-face-cry" lay-event="pass"></i> 
-        {{#  } }}  
-      </script>
     <script src="../layui/layui.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-    <script type="text/html" id="wechatHead">
-        <img style="height:30px;width:28px" src="{{d.headImgUrl}}">
-      </script>
     <script>
         layui.use(['table', 'laytpl', 'layer', 'util'], function () {
             var table = layui.table,
@@ -40,58 +36,20 @@
                 util = layui.util;
             table.render({
                 elem: '#test'
-                , url: '/ycglj/user/getAllWeixinUser.do?place=1'
-                , title: '微信数据列表'
+                , url: '/ycglj/user/getAllCheckPerson.do?'
+                , title: '稽查人员信息表'
                 , page: true
                 , cols: [[
                     { type: 'checkbox' },
                     { field: 'id', title: 'ID', sort: true }
-                    , { field: 'headImgUrl', title: '微信头像', templet: '#wechatHead' }
-                    , { field: 'nickname', edit: 'text', title: '微信昵称' }
-                    , { field: 'phone', edit: 'text', title: '电话' }
-                    , { field: 'city', edit: 'text', title: '微信所在地' }
-                    , { field: 'openId', title: 'openId' }
-                    , { field: 'subscribeTime', title: '关注时间', align: 'center', templet: function (d) { return util.toDateString(d.subscribeTime, 'yyyy-MM-dd HH:mm') } }
-                    , { title: '操作', toolbar: '#barDemo' }
+                    , { field: 'name', title: '姓名', edit: 'text' }
+                    , { field: 'unit', edit: 'text', title: '单位' }
+                    , { field: 'department', edit: 'text', title: '部门' }
+                    , { field: 'duty', edit: 'text', title: '职务' }
+                    , { field: 'phone', title: '手机号', edit: 'text' }
+                    , { field: 'card_number', title: '执法证编号', edit: 'text' }
                 ]]
             });
-            //监听行工具事件
-            table.on('tool(test)', function (obj) {
-                var openId = obj.data.openId;
-                if (obj.event === 'pass') {
-                    place = 2;
-                    $.ajax({
-                        type: "get",
-                        url: "/ycglj/user/upAtionFormatter.do?openId=" + openId + "&place=2",
-                        contentType: 'application/x-www-form-urlencoded;charset=utf-8',
-                        data: {},
-                        dataType: "json",
-                        success: function (data) {
-                            // layer.msg("设置成功", { icon: 1 });
-                            table.reload('test');
-                        },
-                        error: function (e) {
-                            console.log(e);
-                        }
-                    })
-                } else if (obj.event === 'dispass') {
-                    $.ajax({
-                        type: "get",
-                        url: "/ycglj/user/upAtionFormatter.do?openId=" + openId + "&place=0",
-                        contentType: 'application/x-www-form-urlencoded;charset=utf-8',
-                        data: {},
-                        dataType: "json",
-                        success: function (data) {
-                            // layer.msg("设置成功", { icon: 1 });
-                            table.reload('test');
-                        },
-                        error: function (e) {
-                            console.log(e);
-                        }
-                    })
-                }
-                layer.msg("设置成功", { icon: 1 });
-            })
             //监听搜索
             layui.form.on('submit(search)', function (data) {
                 //input值
@@ -101,15 +59,42 @@
                 //执行重载
                 table.reload('test', {
                     where: field,
-                    url: '/ycglj/user/getAllWeixinUser.do?place=1&search='+search,
+                    url: '/ycglj/user/getAllCheckPerson.do?&search=' + search,
                 });
             });
+            //监听单元格编辑
+            table.on('edit(test)', function (obj) {
+                var value = obj.value //得到修改后的值
+                    , data = obj.data //得到所在行所有键值
+                    , field = obj.field; //得到字段
+                if (field == "id_number") {
+                    field = "idNumber"
+                }
+                // layer.msg('[ID: ' + data.id + '] ' + field + ' 字段更改为：' + value);
+                // layer.msg(field);
 
+                // $.ajax({
+                //   type: "get",
+                //   url: "/ycglj/user/updateUser.do?openId=" + data.open_id + "&" + field + "=" + value + "&license=" + data.license,
+                //   contentType: 'application/x-www-form-urlencoded;charset=utf-8',
+                //   data: {},
+                //   dataType: "json",
+                //   success: function (data) {
+                //     if (data == 1) {
+                //       layer.msg('修改成功', { icon: 1 });
+                //     } else if (data == 2) {
+                //       layer.msg('电话号码已存在', { icon: 2 });
+                //     } else {
+                //       layer.msg('error', { icon: 2 });
+                //       layui.form.render();
+                //     }
+                //   },
+                //   error: function (e) {
+                //     console.log(e);
+                //   }
+                // })
+            });
         })
-        function setStatus(openId, place) {
-
-        }
-
     </script>
 </body>
 
