--- a/src/main/webapp/layuiadmin/map/allMap.html
+++ b/src/main/webapp/layuiadmin/map/allMap.html
@@ -90,12 +90,12 @@
 		//监听下拉框
 		layui.form.on('select(yt)', function (data) {
 			yetai = data.value;
-			addDeck("","","",yetai,"");
+			addDeck("", "", "", yetai, "");
 		})
 		//监听下拉框
 		layui.form.on('select(ay)', function (data) {
 			anyou = data.value;
-			addDeck("","","","",anyou);
+			addDeck("", "", "", "", anyou);
 		})
 		//监听搜索
 		layui.form.on('submit(search)', function (data) {
@@ -187,10 +187,19 @@
 		xhm.send();
 		var data = JSON.parse(xhm.responseText);
 		var ticket = data.rows;
-		$('#total').text("位置个数:" + data.total);
-
-		console.log(ticket);
+		total = data.total;
+		$('#total').text("位置个数:" + total);
+		setColor(ticket);
+		//移除控件后再添加控件
+		// map.removeControl(myZoomCtrl);
+		// map.addControl(myZoomCtrl);
+	}
+	function setColor(ticket) {
 		var points = []; // 添加海量点数据
+		var points1 = [];
+		var points2 = [];
+		var pointCollection, pointCollection1, pointCollection2;
+
 		//默认颜色
 		var options1 = {
 			size: BMAP_POINT_SIZE_SMALL,
@@ -207,81 +216,87 @@
 		var options3 = {
 			size: BMAP_POINT_SIZE_SMALL,
 			shape: BMAP_POINT_SHAPE_STAR,
-			color: '#c62828'
+			color: '#FF9933'
 		}
-		//案由和业态并存颜色
+		//两个以上颜色
 		var options4 = {
 			size: BMAP_POINT_SIZE_SMALL,
 			shape: BMAP_POINT_SHAPE_STAR,
-			color: '#f4511e'
+			color: '#FF0000'
 		}
-		console.log("any" + any);
 		for (var i = 0; i < ticket.length; i++) {
-			points.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
-			console.log("any-------" + any);
-			if (yit.length > 0 && any.length == 0) {
-				var pointCollection = new BMap.PointCollection(points, options2); // 初始化PointCollection
-			}
-			else if (any.length > 0 && yit.length == 0) {
-				var pointCollection = new BMap.PointCollection(points, options3); // 初始化PointCollection
-			}
-			else if (any.length > 0 && yit.length > 0) {
-				var pointCollection = new BMap.PointCollection(points, options4); // 初始化PointCollection
-			}
-			else if (name != '') {
-				// alert("aaa");
-				console.log(name);
-				
-			} else {
-				var pointCollection = new BMap.PointCollection(points, options1); // 初始化PointCollection
+			if (ticket[i].criminal_number == 0) {
+				points.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
+				pointCollection = new BMap.PointCollection(points, options1);
+			} else if (ticket[i].criminal_number == 1) {
+				points1.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
+				pointCollection1 = new BMap.PointCollection(points1, options3);
+			} else if (ticket[i].criminal_number > 1) {
+				points2.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
+				pointCollection2 = new BMap.PointCollection(points2, options4);
 			}
 		}
-
-		pointCollection.addEventListener('click', function (e) {
-			var xhm = new XMLHttpRequest();
-			xhm.open("GET",
-				"../../baiduMap/getLicenseGUIDByPosition.do?lng="
-				+ e.point.lng + "&lat="
-				+ e.point.lat, false);
-			xhm.setRequestHeader("Content-type",
-				"application/x-www-form-urlencoded");
-			xhm.send();
-			var data = JSON.parse(xhm.responseText);
-			var license = data.license;
-			$.ajax({
-				type: "POST",
-				url: "../../mobile/user/getRoomInfoByGUID.do",
-				data: {
-					"license": license
-				},
-				dataType: "json",
-				error: function (request) {
-					console.log(request);
-				},
-				success: function (result) {
-					var content = "<h4 style='margin:0 0 5px 0;padding:0.2em 0'> 烟点位置: "
-						+ result.roomInfo.address
-						+ "</h4>"
-						+ "<img style='float:right;margin:4px' id='imgDemo' src=/ycglj" + result.fileBytes[0].uri + " width='139' height='104'/>"
-						+ "<p>"
-						+ " 用户姓名 : "
-						+ result.roomInfo.name
-						+ " "
-						+ " 手机号 : "
-						+ result.roomInfo.phone
-						+ " "
-						+ " 许可证号 : "
-						+ result.roomInfo.license
-					var infoWindow = new BMap.InfoWindow(content); // 创建信息窗口对象
-					map.openInfoWindow(infoWindow, new BMap.Point(
-						e.point.lng, e.point.lat)); //开启信息窗口
-				}
-			})
-		});
+		if (pointCollection != null) {
+			pointCollection.addEventListener('click', function (e) {
+				openwindow(e.point.lng,e.point.lat);
+			});
+		}
+		if (pointCollection1 != null) {
+			pointCollection1.addEventListener('click', function (e) {
+				openwindow(e.point.lng,e.point.lat);
+			});
+		}
+		if (pointCollection2 != null) {
+			pointCollection2.addEventListener('click', function (e) {
+				openwindow(e.point.lng,e.point.lat);
+			});
+		}
 		map.addOverlay(pointCollection); // 添加Overlay
+		map.addOverlay(pointCollection1); // 添加Overlay
+		map.addOverlay(pointCollection2); // 添加Overlay
 
 	}
-	
+	function openwindow(lng,lat) {
+		var xhm = new XMLHttpRequest();
+		xhm.open("GET",
+			"../../baiduMap/getLicenseGUIDByPosition.do?lng="
+			+ lng + "&lat="
+			+ lat, false);
+		xhm.setRequestHeader("Content-type",
+			"application/x-www-form-urlencoded");
+		xhm.send();
+		var data = JSON.parse(xhm.responseText);
+		var license = data.license;
+		$.ajax({
+			type: "POST",
+			url: "../../mobile/user/getRoomInfoByGUID.do",
+			data: {
+				"license": license
+			},
+			dataType: "json",
+			error: function (request) {
+				console.log(request);
+			},
+			success: function (result) {
+				var content = "<h4 style='margin:0 0 5px 0;padding:0.2em 0'> 烟点位置: "
+					+ result.roomInfo.address
+					+ "</h4>"
+					+ "<img style='float:right;margin:4px' id='imgDemo' src=/ycglj" + result.fileBytes[0].uri + " width='139' height='104'/>"
+					+ "<p>"
+					+ " 用户姓名 : "
+					+ result.roomInfo.name
+					+ " "
+					+ " 手机号 : "
+					+ result.roomInfo.phone
+					+ " "
+					+ " 许可证号 : "
+					+ result.roomInfo.license
+				var infoWindow = new BMap.InfoWindow(content); // 创建信息窗口对象
+				map.openInfoWindow(infoWindow, new BMap.Point(
+					lng, lat)); //开启信息窗口
+			}
+		})
+	}
 	//获取覆盖物位置
 	function attribute(e) {
 		var p = e.target;
