--- a/src/main/webapp/layuiadmin/map/echarts.html
+++ b/src/main/webapp/layuiadmin/map/echarts.html
@@ -2,107 +2,105 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>统计图表</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="../../layuiadmin/style/admin.css" media="all">
-    <link rel="stylesheet" href="../layui/css/layui.css" media="all">
-    <!--jquery weui-->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.3/style/weui.min.css">
+  <meta charset="utf-8">
+  <title>统计图表</title>
+  <meta name="renderer" content="webkit">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <link rel="stylesheet" href="../../layuiadmin/style/admin.css" media="all">
+  <link rel="stylesheet" href="../layui/css/layui.css" media="all">
+  <!--jquery weui-->
+  <link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.3/style/weui.min.css">
 </head>
+<style>
+  .main {
+    width: 100%;
+    height: 300px;
+  }
+
+  .pie {
+    width: 100%;
+    height: 300px;
+  }
+</style>
 
 <body>
-    <div class="main" id="main"></div>
-    <div class="pie" id="pie"></div>
-    <div class="layui-fluid">
-        <div class="layui-row layui-col-space15">
-            <div class="layui-col-md6">
-                <div class="layui-card">
-                    <div class="layui-card-header">业态统计图</div>
-                    <div class="layui-card-body">
-                        
 
-                    </div>
-                </div>
-                <div class="layui-card">
-                    <div class="layui-card-header">业态统计图</div>
-                    <div class="layui-card-body">
-
-                        <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade" lay-filter="LAY-index-heapline">
-                            <div carousel-item id="LAY-index-heapline">
-                                <div><i class="layui-icon layui-icon-loading1 layadmin-loading"></i></div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="layui-card">
-                    <div class="layui-card-header">案件统计图</div>
-                    <div class="layui-card-body">
-
-                        <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade" lay-filter="LAY-index-diffline">
-                            <div carousel-item id="LAY-index-diffline">
-                                <div><i class="layui-icon layui-icon-loading1 layadmin-loading"></i></div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-            <div class="layui-col-md6">
-                <div class="layui-card">
-                    <div class="layui-card-header">案件统计图</div>
-                    <div class="layui-card-body">
-
-                        <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade" lay-filter="LAY-index-heaparea">
-                            <div carousel-item id="LAY-index-heaparea">
-                                <div><i class="layui-icon layui-icon-loading1 layadmin-loading"></i></div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="layui-card">
-                    <div class="layui-card-header">三烟统计图</div>
-                    <div class="layui-card-body">
-
-                        <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade" lay-filter="LAY-index-area">
-                            <div carousel-item id="LAY-index-area">
-                                <div><i class="layui-icon layui-icon-loading1 layadmin-loading"></i></div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="layui-card">
-                    <div class="layui-card-header">三烟统计图</div>
-                    <div class="layui-card-body">
-
-                        <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade" lay-filter="LAY-index-logline">
-                            <div carousel-item id="LAY-index-logline">
-                                <div><i class="layui-icon layui-icon-loading1 layadmin-loading"></i></div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
+  <div class="layui-fluid">
+    <div class="layui-row layui-col-space15">
+      <div class="layui-col-md6">
+        <div class="layui-card">
+          <div class="layui-card-header">业态统计图</div>
+          <div class="layui-card-body">
+            <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade" lay-filter="LAY-index-heapline">
+              <div class="main" id="main"></div>
             </div>
 
+          </div>
         </div>
+        <div class="layui-card">
+          <div class="layui-card-header">案件统计图</div>
+          <div class="layui-card-body">
+            <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade" lay-filter="LAY-index-heapline">
+              <div class="main" id="main2"></div>
+            </div>
+          </div>
+        </div>
+        <div class="layui-card">
+          <div class="layui-card-header">三烟统计图</div>
+          <div class="layui-card-body">
+
+            <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade" lay-filter="LAY-index-diffline">
+              <div class="main" id="main3"></div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class="layui-col-md6">
+        <div class="layui-card">
+          <div class="layui-card-header">业态统计图</div>
+          <div class="layui-card-body">
+
+            <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade" lay-filter="LAY-index-heapline">
+              <div class="pie" id="pie"></div>
+            </div>
+          </div>
+        </div>
+        <div class="layui-card">
+          <div class="layui-card-header">案件统计图</div>
+          <div class="layui-card-body">
+
+            <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade" lay-filter="LAY-index-area">
+              <div class="pie" id="pie2"></div>
+            </div>
+          </div>
+        </div>
+        <div class="layui-card">
+          <div class="layui-card-header">三烟统计图</div>
+          <div class="layui-card-body">
+            <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade" lay-filter="LAY-index-logline">
+              <div class="pie" id="pie3"></div>
+            </div>
+
+          </div>
+        </div>
+
     </div>
+  </div>
 
 
-    <script src="../layui/layui.js"></script>
-    <script src="../echarts.common.min.js"></script>
-    <script src="https://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
-    <script>
-      $(document).ready(function(){
-       tab1();
-      })
-       
- function tab1() {
+  <script src="../layui/layui.js"></script>
+  <script src="../echarts.common.min.js"></script>
+  <script src="https://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      tab1();
+      tab2();
+      tab3();
+    })
+
+    function tab1() {
       var myChart = echarts.init(document.getElementById('main'), 'light');
       var myChart2 = echarts.init(document.getElementById('pie'), 'light');
       var option = {
@@ -112,19 +110,20 @@
             data: ['1月', '2月', '3月', '4月', '5月', '6月', '7月', '8月', '9月', '10月', '11月', '12月'],
             left: 0,
             right: 0,
-            bottom: 60
+            bottom: 0
           },
           series: [
             {
               name: '业态统计',
               type: 'pie',
-              radius: '55%',
-              center: ['50%', '50%'],
+              radius: '45%',
+              center: ['45%', '50%'],
             }
           ],
           legend: {
             x: 'left',
-            top: 30,
+            top: 25,
+            left: 25,
             // y: 'bottom',
             data: ['食杂店', '便利店', '超市', '商场', '烟酒店', '娱乐服务', '路边摊', '其他']
           },
@@ -239,8 +238,279 @@
       }
       myChart.setOption(option2);
       myChart2.setOption(option);
- }
-    </script>
+    }
+    function tab2() {
+      var myChart = echarts.init(document.getElementById('main2'), 'light');
+      var myChart2 = echarts.init(document.getElementById('pie2'), 'light');
+      var option = {
+        baseOption: {
+          timeline: {
+            axisType: 'category',//轴类型 value category time
+            data: ['1月', '2月', '3月', '4月', '5月', '6月', '7月', '8月', '9月', '10月', '11月', '12月'],
+            left: 0,
+            right: 0,
+            bottom: 0
+          },
+          series: [
+            {
+              name: '案件统计',
+              type: 'pie',
+              radius: '55%',
+              center: ['50%', '50%'],
+            }
+          ],
+          legend: {
+            x: 'left',
+            top: 25,
+            left: 25,
+            // y: 'bottom',
+            data: ['非渠道', '假冒', '走私', '无证运输', '无证经营', '无证批发', '超邮', '其他']
+          },
+          tooltip: {
+            trigger: 'item',
+            formatter: "{a} <br/>{b} : {c}起 ({d}%)"
+          },
+          calculable: true,
+        },
+        options: [
+          { // 这是'2002-01-01' 对应的 option
+            title: {
+              text: '2018年1月案件饼状图',
+            },
+            series: [
+              {
+                data: [{ value: 10, name: '非渠道' },
+                { value: 5, name: '假冒' },
+                { value: 15, name: '走私' },
+                { value: 25, name: '无证运输' },
+                { value: 20, name: '无证经营' },
+                { value: 35, name: '无证批发' },
+                { value: 30, name: '超邮' },
+                { value: 40, name: '其他' }]
+              },
+            ]
+          }, { // 这是'2002-01-01' 对应的 option
+            title: {
+              text: '2018年2月案件饼状图'
+            },
+            series: [
+              {
+                data: [{ value: 20, name: '非渠道' },
+                { value: 15, name: '假冒' },
+                { value: 4, name: '走私' },
+                { value: 3, name: '无证运输' },
+                { value: 22, name: '无证经营' },
+                { value: 14, name: '无证批发' },
+                { value: 31, name: '超邮' },
+                { value: 40, name: '其他' }]
+              }
+            ]
+          },
+        ],
+
+      };
+      var option2 = {
+        //固定框架的option
+        baseOption: {
+          timeline: {
+            //loop: false,      
+            axisType: 'category',//轴类型 value category time
+            show: true,//开关
+            autoPlay: true,//是否自动播放
+            playInterval: 2000,//播放时间
+            data: ['1月', '2月', '3月', '4月', '5月', '6月', '7月', '8月', '9月', '10月', '11月', '12月'],
+            left: 0,
+            right: 0
+          },
+          // legend: {
+          //     data: ['业态', '案件', '三烟']
+          // },
+          grid: { containLabel: true },
+          yAxis: [{
+            // type: 'value',
+            // name: '单位/条',
+            // max: 100
+          }],
+          xAxis: [{
+            type: 'category',
+            // inverse: true, 反转
+            data: ['非渠道', '假冒', '走私', '无证运输', '无证经营', '无证批发', '超邮', '其他']
+          }],
+          tooltip: {
+            trigger: 'axis',
+            formatter: "{a} <br/>{b} : {c} " + '起'
+          },
+          series: [
+            {
+              name: '案件',
+              type: 'bar',
+            },
+          ]
+        },
+        //变化数据
+        options: [
+          //1990
+          {
+            title: {
+              text: '2018年1月案件统计图'
+            },
+            series: [
+              {
+                data: [5, 40, 16, 10, 10, 20, 10, 10]
+              },
+
+            ]
+          },
+          //1995
+          {
+            title: {
+              text: '2018年2月案件统计图'
+            },
+            series: [
+              {
+                data: [5, 24, 32, 73, 31, 65, 25, 55]
+              },
+            ]
+          },
+        ]
+      }
+      myChart.setOption(option2);
+      myChart2.setOption(option);
+      // myChart.resize();
+      // myChart2.resize();
+    }
+    function tab3() {
+      var myChart = echarts.init(document.getElementById('main3'), 'light');
+      var myChart2 = echarts.init(document.getElementById('pie3'), 'light');
+      var option = {
+        baseOption: {
+          timeline: {
+            axisType: 'category',//轴类型 value category time
+            data: ['1月', '2月', '3月', '4月', '5月', '6月', '7月', '8月', '9月', '10月', '11月', '12月'],
+            left: 0,
+            right: 0,
+            bottom: 0
+          },
+          series: [
+            {
+              name: '三烟统计',
+              type: 'pie',
+              radius: '55%',
+              center: ['50%', '50%'],
+            }
+          ],
+          legend: {
+            x: 'left',
+            top: 25,
+            left: 25,
+            // y: 'bottom',
+            data: ['非渠道', '假冒', '走私']
+          },
+          tooltip: {
+            trigger: 'item',
+            formatter: "{a} <br/>{b} : {c}条 ({d}%)"
+          },
+          calculable: true,
+        },
+        options: [
+          { // 这是'2002-01-01' 对应的 option
+            title: {
+              text: '2018年1月三烟饼状图',
+            },
+            series: [
+              {
+                data: [{ value: 10, name: '非渠道' },
+                { value: 5, name: '假冒' },
+                { value: 15, name: '走私' }]
+              },
+            ]
+          }, { // 这是'2002-01-01' 对应的 option
+            title: {
+              text: '2018年2月三烟饼状图'
+            },
+            series: [
+              {
+                data: [{ value: 20, name: '非渠道' },
+                { value: 15, name: '假冒' },
+                { value: 4, name: '走私' }]
+              }
+            ]
+          },
+        ],
+
+      };
+      var option2 = {
+        //固定框架的option
+        baseOption: {
+          timeline: {
+            //loop: false,      
+            axisType: 'category',//轴类型 value category time
+            show: true,//开关
+            autoPlay: true,//是否自动播放
+            playInterval: 2000,//播放时间
+            data: ['1月', '2月', '3月', '4月', '5月', '6月', '7月', '8月', '9月', '10月', '11月', '12月'],
+            left: 0,
+            right: 0
+          },
+          // legend: {
+          //     data: ['业态', '案件', '三烟']
+          // },
+          grid: { containLabel: true },
+          yAxis: [{
+            // type: 'value',
+            // name: '单位/条',
+            // max: 100
+          }],
+          xAxis: [{
+            type: 'category',
+            // inverse: true, 反转
+            data: ['非渠道', '假冒', '走私']
+          }],
+          tooltip: {
+            trigger: 'axis',
+            formatter: "{a} <br/>{b} : {c} " + '条'
+          },
+          series: [
+            {
+              name: '三烟',
+              type: 'bar',
+            },
+          ]
+        },
+        //变化数据
+        options: [
+          //1990
+          {
+            title: {
+              text: '2018年1月三烟统计图'
+            },
+            series: [
+              {
+                data: [5, 40, 16]
+              },
+
+            ]
+          },
+          //1995
+          {
+            title: {
+              text: '2018年2月三烟统计图'
+            },
+            series: [
+              {
+                data: [5, 24, 32]
+              },
+            ]
+          },
+        ]
+      }
+      myChart.setOption(option2);
+      myChart2.setOption(option);
+      // myChart.resize();
+      // myChart2.resize();
+    }
+
+  </script>
 </body>
 
 </html>
